Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16167

"connect" storage engine using table type VEC: cannot use "unsigned" types

    XMLWordPrintable

Details

    Description

      I cannot insert into a VEC table any values as soon as I declare a column "unsigned".
      Example:

      Step 1)

      CREATE TABLE test (
        mycol tinyint unsigned
      )
      DEFAULT CHARSET=utf8 COLLATE=utf8_bin
      engine=CONNECT table_type=VEC file_name='test_.vec'
      ;
      

      Step 2)

      insert into test values(1)
      ;
      

      Result)

      ERROR 1296 (HY000): Got error 122 'Non matching Value types' from CONNECT
      

      Tried with different integer types ("integer", "bigint"), but the result is always the same.
      Am I doing something wrong?
      Docs (https://mariadb.com/kb/en/library/connect-data-types/#unsigned-numeric-types) state that unsigned should not be a problem (from what I understood mariadb 10.1.31 & .34 should be using a connect-engine more recent than 1.01.0010)
      Thx

      p.s.: explicitly used collate & charset as I have in "my.cnf":

      character-set-server = utf8
      collation-server = utf8_bin
      

      Attachments

        Activity

          People

            bertrandop Olivier Bertrand
            mariodb Stefano
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 5h
                5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.