- Fix MDEV-16167 Cannot insert unsigned values into a VEC table   modified:   storage/connect/filamvct.cpp   modified:   storage/connect/tabvct.cpp

_ Typo
    modified:   storage/connect/CMakeLists.txt